2005-07-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_cvsimport_drepper2.at: Canonicalise monotone output so
	that the test passes on Win32.

2005-06-30  Eric Kidd  <eric.kidd@dartmouth.edu>

	* contrib/monotone-import.pl: Changed $branch to
	$user_branch.  This script may need more work, but at least Perl
	compiles it now.

2005-06-30  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* automate.cc, basic_io.hh, cert.cc, change_set.cc,
	cryptopp/config.h, cryptopp/integer.cpp, main.cc, merkle_tree.cc,
	merkle_tree.hh, monotone.cc, netcmd.cc, netsync.cc,
	netxx/osutil.h, packet.cc: Namespace and include file cleanup.

2005-06-29  graydon hoare  <graydon@pobox.com>

	* tests/t_cvsimport_drepper2.at: New test.
	* testsuite.at: Call it.

2005-06-23  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc (import_cvs_repo): Put branch imports inside
	transaction blocks, add a couple tickers.

2005-06-22  graydon hoare  <graydon@pobox.com>

	* rcs_file.cc: Track file:line numbers, accept files which violate
	some lies in rcs file format.
	* rcs_import.cc (cvs_tree_walker): 
	Warn rather than crash on parse errors.
	(cvs_history)
	(cvs_commit)
	(cvs_cluster)
	(prepared_revision)
	(import_branch)
	(import_cvs_repo): Support non-branch tags.

2005-06-21  graydon hoare  <graydon@pobox.com>

	* rcs_import.{cc,hh} (import_rcs_file): Rename to test_parse_rcs_file.
	* commands.cc (rcs_import): rename call.

2005-06-19  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc: Rewrite change set inference logic.

2005-06-28  Roland Illig  <roland.illig@gmx.de>

	* app_state.cc: #include <unistd.h>, needed on NetBSD.

2005-06-28  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua (ignore_file): Ignore vim swap files and emacs
	temp files.

2005-06-27  Nathaniel Smith  <njs@codesourcery.com>

	* INSTALL: Bump required version of Boost to 1.32.

2005-06-26  Matthew Gregan  <kinetik@orcon.net.nz>

	* app_state.cc (app_state::app_state()): Initialise no_merges to