@@ -1,3 +1,12 @@
+2005-07-03  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* sqlite/{sqlite3.h,tokenize.c} (sqlite3_complete_last): New
+	function to find the last valid SQL statement in a string; based
+	on sqlite3_complete.  This change should be offered upstream, but
+	probably not before sqlite3_complete_last16 is implemented.
+	* database.cc (database::load): Load and execute dump in chunks,
+	fixes bug 13570.
+
 2005-07-01  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* tests/t_cvsimport_drepper2.at: Canonicalise monotone output so
